fixed wraparound in index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,3 +17,8 @@ body {
 .about-me {
   background-color: white;
 }
+
+.profile-img {
+  width: auto;
+  height: 200px;
+}
